_practice/250218_24nation1/manifest/order.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deploy
  namespace: wsc2024
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      serviceAccountName: dynamodb
      tolerations:
        - key: dedicated
          value: "app"
          effect: NoSchedule
          operator: Equal
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - db
      containers:
        - name: app
          image: 658986583341.dkr.ecr.ap-northeast-2.amazonaws.com/order-repo
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: order
  namespace: wsc2024
spec:
  selector:
    app: order
  ports:
    - port: 8080
      targetPort: 8080
