_practice/250218_24nation1/manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wsc2024-alb
  namespace: wsc2024
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: wsc2024-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /healthcheck
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "5"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "2"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=60
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /v1/product
        pathType: Prefix
        backend:
          service:
            name: product
            port:
              number: 8080
      - path: /v1/customer
        pathType: Prefix
        backend:
          service:
            name: customer
            port:
              number: 8080
      - path: /v1/order
        pathType: Prefix
        backend:
          service:
            name: order
            port:
              number: 8080
