_practice/250218_24nation1/manifest/lattice.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: wsc2024-lattice-svc-net
  namespace: wsc2024
spec:
  gatewayClassName: amazon-vpc-lattice
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes: # 모든 namespace의 HTTPRoute를 허용
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: customer
  namespace: wsc2024
spec:
  parentRefs:
    - name: wsc2024-lattice-svc-net
      sectionName: http
  rules:
    - backendRefs:
        - name: customer
          kind: Service
          port: 8080
